# mcp-browser-use

./: .gitignore  .mcp.json  .ubsignore  AGENTS.md  CHANGES.txt  CLAUDE.md  PLAN_TO_SHIP_MCP_BROWSER_USE.md  README.md  fastmcp.json  justfile  mcp_entrypoint.py  pyproject.toml
.apr/: config.yaml  oracle-prompt-recipe-architecture.md
.apr/workflows/: mcp-browser-use.yaml  recipe-architecture.yaml
.beads/: issues.jsonl  last-touched
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/hooks/: SessionStart.py
.claude-plugin/skills/: browser-server.md
.claude/handoffs/: 2025-12-05-modernize-mcp-browser-use.md  2025-12-09-context-logging-implementation.md  2025-12-16-skills-direct-execution.md  2025-12-16-skills-next-steps.md  2025-12-17-codex-observability-findings.md  (+2 more)
docs/: fastmcp-migration-solution.md  recipe-learning-summary.md  recipes-design.md  skills-design.md
hooks/: hooks.json
plans/: deep-research-background.md  modernize-mcp-browser-use.md  skills-library-150-services.md
scripts/: daemon-check.py  git-safety-guard.py  mcp-server.py  smart-install.py  test-recipes.py
tests/: __init__.py  conftest.py  test_artifacts_security.py  test_candidates.py  test_config.py  test_dashboard_api.py  test_dashboard_integration.py  test_e2e.py  test_e2e_recipe_learning.py  test_extraction_assist.py  test_fingerprint.py  test_heuristic_analyzer.py  test_mcp_tools.py  test_minimizer.py  test_observability.py  test_providers.py  test_recipe_analyzer_validation.py  test_recipe_artifacts_models.py  test_recipe_parameter_passing.py  test_recipe_store_async.py  test_recipes.py  test_recipes_security.py  test_recorder_contract.py  test_signals.py  test_skills.py  test_skills_security.py  test_task_concurrency.py  test_verifier.py
todos/: 001-pending-p1-auth-token-not-enforced.md  002-pending-p2-direct-fetch-url-encoding.md  003-pending-p2-recipestore-non-atomic-write.md  003-pending-p2-skillstore-non-atomic-write.md  004-pending-p2-recipestore-name-collision.md  004-pending-p2-skillstore-name-collision.md  005-pending-p2-blocking-recipestore-io.md  005-pending-p2-blocking-skillstore-io.md  006-pending-p2-running-tasks-bg-leak.md  007-pending-p2-allowed-domains-default.md  008-pending-p2-direct-fetch-unbounded-response.md  009-pending-p2-analysis-output-not-validated.md  010-pending-p3-recorder-json-only.md  011-pending-p3-missing-bs4-dep.md  012-pending-p3-weak-recipe-validation.md  012-pending-p3-weak-skill-validation.md  013-pending-p3-docs-cli-mismatch.md  014-pending-p3-fetch-parse-error-raw-body.md  015-pending-p3-unify-sensitive-headers.md  016-pending-p3-api-recipe-run-direct-exec.md  016-pending-p3-api-skill-run-direct-exec.md
ui/: dashboard.html  viewer.html
(+68 files in other folders)
